@@ -75,7 +75,7 @@ and the list of coyright notices (listoffloats).
 </p>
 <p>See the caption <a href="float_copying.html#public-domain-anchor">public domain anchor</a>.
 </p>
-<p>See the float <a href="float_copying.html#public-domain">public domain</a>.
+<p>See the float <a href="float_copying.html#public-domain">Copyright notice 1</a>.
 </p>
 <a name="index-listofloats"></a>
 
