@@ -155,7 +155,7 @@ an alert, positive for a very serious error. The precise value determines
 where the error occured.
 <var>info</var> is an integer holding more precise information about the
 error. It is usually the information value from lapack.
-The precise meaning of these error codes is in <a href="#tab_003aerror_005fcodes">tab:error_codes</a>.
+The precise meaning of these error codes is in <a href="#tab_003aerror_005fcodes">table 3.1</a>.
 </p></dd></dl>
 
 <div class="float"><a name="tab_003aerror_005fcodes"></a>
