@@ -144,7 +144,7 @@ by &lsquo;<samp>:</samp>&rsquo;.
 </p>
 <p>Rules for preprocessing of the files are defined in the file 
 &lsquo;<tt>Makefile.miniker</tt>&rsquo; for the file types described in 
-<a href="#tab_003acmfile_005fsuffix">tab:cmfile_suffix</a>:
+<a href="#tab_003acmfile_005fsuffix">table 3.2</a>:
 </p>
 <div class="float"><a name="tab_003acmfile_005fsuffix"></a>
 <table>
