@@ -98,7 +98,7 @@ of the mesh-volume of water at temperature <code>T_k</code>.
 The smooth-step function is a quasi
 hyperbolic tangent function of       x&#x2215;&#x0394;, 
 normalised from 0 to 1, with a maximum slope
-of 2.5, see figure <a href="#heavy">heavy</a>.
+of 2.5, see figure <a href="#heavy">Figure 3.1</a>.
 </p>
 <div class="float"><a name="heavy"></a>
 <img src="heavyside.jpg" alt="heavyside">
