@@ -107,7 +107,7 @@ ul.toc {list-style: none}
 
 <p>Ref to node <a href="#node">node</a>.
 </p>
-<p>Ref to @samp{node} <a href="#node">&lsquo;<samp>node</samp>&rsquo;</a>.
+<p>Ref to @samp{node} <a href="#node">Figure 1</a>.
 </p>
 <hr size="6">
 <a name="SEC_About"></a>
